--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,4 @@
+<%= tinymce %>
 <%= form_for @post, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :title, :class => 'control-label' %>
@@ -8,7 +9,7 @@
   <div class="control-group">
     <%= f.label :content, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_area :content, :rows => 30, :style => "width:98%; resize: none",  :class => 'text_area'%>
+    	<%= f.text_area :content, :class => "tinymce", :rows => 40, :style => "width:98%; resize: none" %>
     </div>
   </div>
 
