--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,23 @@
 		<div class="navbar-inner">
 			<div class="container">
 				<a class="brand" href="#"> Somewhere in the cloud</a>
+				<% if user_signed_in? %>
+					<ul class="nav pull-right">
+						<li class="dropdown">
+       						<a class="dropdown-toggle" data-toggle="dropdown">
+       						Welcome <%= current_user.first_name + " "+ current_user.last_name%>
+       						<b class="caret"></b>
+       						</a>
+       						<ul class="dropdown-menu">
+       							<a href="#">
+       							<%= link_to "Sign out", destroy_user_session_path, :method => :delete%> 
+								</a>
+							</ul>
+						</li>
+					</ul>
+				<% end %>
 			</div>
+			
 		</div>
 	</div>
 		<div class="container">
@@ -19,15 +35,16 @@
 				<div class="span12">
 					<div class="banner"></div>					
 					<div class="subnav">
-						<div class="nav nav-tabs">
+						<ul class="nav nav-tabs">
 							<li><%= link_to "About me" %></li>
 							<%if Post.count > 0%>
 								<li><%= link_to "Archive", posts_path %></li>
 							<%end%>
 					        <li><%= link_to "Blog", posts_detail_path%></li>
 					        <li><%= link_to "Create Post", new_post_path%></li> 
-						</div>
-				</div>
+						</ul>
+					</div>
+					
 				</div>
 			</div>
 			<div class="body">
