--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,9 @@
     <tr>
       <th><%= sortable 'title' %></th>
       <th><%= sortable 'created_at' %></th>
+      <% if user_signed_in? %>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <% end %>
     </tr>
   </thead>
   <tbody>
@@ -14,6 +16,7 @@
         <td><%= link_to post.title, post_path(post) %></td>
         <td><%= post.created_at.strftime("%a, %b %d %Y") %></td>
         <td>
+       	<% if user_signed_in? %>
           <%= link_to " Edit",
                       edit_post_path(post), :class => 'btn btn-mini' %>
           <%= link_to " Delete",
@@ -21,6 +24,7 @@
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
+        <% end %>
         </td>
       </tr>
     <% end %>
