--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -51,6 +51,7 @@
 	<% end %>
 	</div>
 	<div class="form-actions">
+	 <% if user_signed_in? %>
 	  <%= link_to " Edit Post",
 	              edit_post_path(@post), :class => 'btn icon-edit' %>
 	  <%= link_to " Delete Post",
@@ -58,6 +59,7 @@
 	              :method => 'delete',
 	              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
 	              :class => 'btn btn-danger icon-trash' %>
+	  <% end %>
 	  <%= link_to " Back to Blog", posts_detail_path, :class => "btn btn-primary icon-backward" %>
 	</div>
 	
