--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,7 +8,8 @@
     </div>
   </div>
   <div class="control-group">
-    <div class="controls">
+  		<%= f.label :content, :class => 'control-label'%>
+   <div class="controls">
     	<%= f.text_area :content, :class => "tinymce", :rows => 40, :style => "width:98%; resize: none;" %>
     </div>
   </div>
