--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= link_to post.title, post_path(post) %></td>
         <td><%= post.created_at.strftime("%a, %b %d %Y") %></td>
         <td>
-       	<% if user_signed_in? %>
+       	<% if user_signed_in? and post.user == current_user %>
           <%= link_to " Edit",
                       edit_post_path(post), :class => 'btn btn-mini' %>
           <%= link_to " Delete",
