--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th><%= sortable 'title' %></th>
+      <th><%= sortable 'author' %></th>
       <th><%= sortable 'created_at' %></th>
       <% if user_signed_in? %>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -14,6 +15,7 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= link_to post.title, post_path(post) %></td>
+		<td><%= post.user.first_name + " " +  post.user.last_name %></td>
         <td><%= post.created_at.strftime("%a, %b %d %Y") %></td>
         <td>
        	<% if user_signed_in? and post.user == current_user %>
