--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -43,6 +43,7 @@
 		  </div>
 			
 		<div class="control-group">
+			<%= f.label :body, :class => 'control-label' %>
 		    <div class="controls">
 		      <%= f.text_area :body, :rows => 4, :style => "width:70%; resize: none", :class => 'text_area'%><%= " *"%>
 		    </div>
