change some display

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -80,14 +80,14 @@ pre{
 }
 
 .subnav{
-  background-color: #d0d0d0;
+  background-color: #e0e0e0;
 }
 
 .nav {
   margin-bottom: 0;
 }
 
-.nav-tabs > li {
+.nav-pills > li {
   border-right: 1px solid #c0c0c0;
 }
 
@@ -109,7 +109,7 @@ pre{
   position:relative;
   width: 100%;
   height: 80px;
-  background-color: #efefef;
+  background-color: #e0e0e0;
   padding-top: 50px;
   text-align: center;
   bottom:0px;
