--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -85,6 +85,7 @@ pre{
 
 .nav {
   margin-bottom: 0;
+  padding-left: 5px;
 }
 
 .nav-pills > li {
@@ -119,3 +120,11 @@ pre{
   width: 330px;
 }
 
+#shadow{
+  box-shadow: inset 6px 0px 5px -5px #000000, 
+              inset -6px 0px 5px -5px #000000;
+  -webkit-box-shadow: inset 6px 0px 5px -5px #000000, 
+            inset -6px 0px 5px -5px #000000;
+  -moz-box-shadow: inset 6px 0px 5px -5px #000000, 
+            inset -6px 0px 5px -5px #000000;
+}
