--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -81,6 +81,7 @@ pre{
 
 .subnav{
   background-color: #e0e0e0;
+  border-bottom: 1px solid #c0c0c0;
 }
 
 .nav {
@@ -90,6 +91,10 @@ pre{
 
 .nav-pills > li {
   border-right: 1px solid #c0c0c0;
+}
+
+.nav a{
+  text-shadow: #0f0f0f 0 1px;  
 }
 
 .body {
