--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,8 +68,8 @@
 				 <% Post.order("created_at DESC").limit(5).each do |post|%>
 				<li><u><%= link_to post.title, post_path(post) %></u></li>
 				<% end%>
-				/ul>	
-				/div>
+				</ul>	
+				</div>
 			</div>
 			</div>
 			</div>			
