fix post show time creation

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
 		<h2><%= @post.title %></h2>
 	</p>
 	<p>
-		<b><%= "Posted on " + @post.created_at.strftime("%a,1 %b %d %Y") + " by " + @post.user.username%></b>
+		<b><%= "Posted on " + @post.created_at.strftime("%b %d %Y") + " by " + @post.user.username%></b>
 	</p>
 	<p>
 	    <pre><%= raw(@post.content) %></pre>
