--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,10 +63,10 @@
 				</li>
 				<hr />
 				<li>
-				 <h3><%= "Recent Posts"%></h3> <br />
+				 <p><h3><%= "Recent Posts"%></h3></p>
 				</li>
 				 <% Post.order("created_at DESC").limit(5).each do |post|%>
-				<li><u><%= link_to post.title, post_path(post) %></u></li>
+				<p><li><u><%= link_to post.title, post_path(post) %></u></li></p>
 				<% end%>
 				</ul>	
 				</div>
