customize page title based on post title

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
-<%= tinymce %>
+<%content_for :title do %>
+	<%= @post.title%>
+<% end %>
 <%- model_class = @post.class -%>
 	<p>
 		<h2><%= @post.title %></h2>
