--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 		<% if content_for?(:title) %>
 			<%=  yield :title%>
 		<% else %>
-			Yet another weblog
+			<%= "Yet another weblog" %>
 		<% end %>
 	</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
