--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -117,7 +117,10 @@ pre{
   background-color: #e0e0e0;
   padding-top: 50px;
   text-align: center;
+  text-shadow: #D9D9D9 0 1px;
   bottom:0px;
+  color: #888;
+  
 }
 
 #right-side{
