--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,9 +81,9 @@
 			</div>			
 			<div class="blog-footer" id="shadow">
 				<% if Time.now.year <= 2012 %>			
-					<%= "Copyright 2012. All Rights Reserved." %>
+					<%= "Copyright © 2012. All Rights Reserved." %>
 				<% else %>
-					<%= "Copyright 2012 - #{Time.now.year}. All Rights Reserved." %>
+					<%= "Copyright © 2012 - #{Time.now.year}. All Rights Reserved." %>
 				<% end %>
 			</div>
 		</div>
