--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,6 +13,12 @@
     </div>
   </div>
 
+	<div class="control-group">
+		<%= f.label :tag_list, :class => 'control-label'%>
+	<div class="controls">
+		<%= f.text_field :tag_list, :class => "text_field" %>
+	</div>
+	</div>
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
