Create a Tag cloud

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#tag_cloud{
+  .s  {font-size: 0.5em; }
+  .m  {font-size: 1.0em; }
+  .l  {font-size: 1.5em;}
+}
