--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= link_to post.title, post_path(post) %></td>
-        <td><%= post.created_at.strftime("%a, %b %d %Y") %></td>
+        <td><%= post.created_at.strftime("%b %d %Y") %></td>
         <td>
        	<% if user_signed_in? and post.user == current_user %>
           <%= link_to " Edit",
