--- a/app/views/posts/posts_detail.html.erb
+++ b/app/views/posts/posts_detail.html.erb
@@ -5,12 +5,12 @@
 		<h2><%= link_to post.title, post_path(post) %></h2>
 	</p>
 	<p>
-		<b><%= "Posted on " + post.created_at.strftime("%a, %b %d %Y") %></b>
+		<b><%= "Posted on " + post.created_at.strftime("%b %d %Y") %></b>
 	</p>
 	<p>
 		<%= raw(truncate(post.content, :length => 250, :omission => "..." + link_to(" Read more", post_path(post)) ))%><br /><br />
 		<%= "Tags: "%>
-		<%= raw post.tags.map{|t| link_to t, tag_path(t.name)}.join(", ")%><br />
+		<%= display_tags(post.tags)%><br />
 		<% if post.comments.count > 1 %>
 			<%= link_to "#{post.comments.count} Comments", post_path(post)%>
 		<% else %>
