--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,9 @@
 	<p>
 		<b><%= "Posted on " + @post.created_at.strftime("%b %d %Y") + " by " + @post.user.username%></b>
 	</p>
+	<p>	<%= "Tags: "%>
+		<%= display_tags(@post.tags) %>
+	</p>
 	<p>
 	    <pre><%= raw(@post.content) %></pre>
 	  	<hr />
