--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,39 +59,37 @@
 			<div class="span8">
 				<%=  yield %>
 			</div>
-			<div class="span4" id="right-side">
-			<ul class="unstyled">
-				<li class="well">
+			<div class="span4 unstyled" id="right-side">
+				<div class="well">
 				<% random = Random.rand(Quote.count) + 1%>
 				<%= Quote.find(random).saying%><br /><br />
 				<b><%= "- #{Quote.find(random).author}"%></b>
-				</li>
+				</div>
 				<hr />
-				<li>
-				 <p><h3><%= "Recent Posts"%></h3></p>
-				</li>
-				<% Post.order("created_at DESC").limit(5).each do |post|%>
-					<p><li><u><%= link_to post.title, post_path(post) %></u></li></p>
-				<% end%>
+				<h3><%= "Recent Posts"%></h3>
+				<ul>
+					<% Post.order("created_at DESC").limit(5).each do |post|%>
+						<p><li><u><%= link_to post.title, post_path(post) %></u></li></p>
+					<% end%>
+				</ul>
 				<hr />
-				<li><h3><%= "Tags "%></h3></li>
-				<li id="tag_cloud">
+				<h3><%= "Tags "%></h3>
+				<div id="tag_cloud">
 					<% tag_cloud Post.tag_counts, %w[s m l] do |tag, css_properties|%>
 						<%= link_to tag.name, tag_path(tag.name), :class => css_properties%>
 					<% end %>
-				</li>
-				</ul>	
 				</div>
 			</div>
 			</div>
-			</div>			
-			<div class="blog-footer" id="shadow">
-				<% if Time.now.year <= 2012 %>			
-					<%= "Copyright © 2012. All Rights Reserved." %>
-				<% else %>
-					<%= "Copyright © 2012 - #{Time.now.year}. All Rights Reserved." %>
-				<% end %>
 			</div>
+		</div>			
+		<div class="blog-footer" id="shadow">
+			<% if Time.now.year <= 2012 %>			
+				<%= "Copyright © 2012. All Rights Reserved." %>
+			<% else %>
+				<%= "Copyright © 2012 - #{Time.now.year}. All Rights Reserved." %>
+			<% end %>
 		</div>
+	</div>
 </body>
 </html>
