--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,8 +29,8 @@
 // @linkColor: #ff0000;
 
 body{
-  padding-top: 20px;
-  background-color: #c0c0c0;
+  padding-top: 25px;
+  //padding-bottom:25px;
   font-size: 17px;
   font-family: 'Lora', Georgia, "Times New Roman", Times;
 }
@@ -49,9 +49,9 @@ pre{
   font-family: 'Lora', Georgia, "Times New Roman", Times;
   line-height: 1.625;
   color: #000;
-  background-color: @white;
+  background-color: #fff;
   word-break: normal;
-  padding: 0px;
+  padding: 1px;
 }
 
 .comment > pre {
@@ -75,7 +75,6 @@ pre{
   height:300px;
   background-image: url("/images/sky.jpg");
   background-size: 100% 300px;
-  margin-top: 20px;
 }
 
 .subnav{
@@ -96,35 +95,36 @@ pre{
   text-shadow: #0f0f0f 0 1px;  
 }
 
-.body {
-  position: relative;
-  background-color: @white;
-  padding: 25px;
-  padding-bottom: 50px;
-}
-
 .blog-footer{
-  position:relative;
-  width: 100%;
   height: 80px;
   background-color: #e0e0e0;
   padding-top: 50px;
   text-align: center;
   text-shadow: #D9D9D9 0 1px;
-  bottom:0px;
-  color: #888;
-  
+  color: #999;
+  margin-bottom: 0;
+  margin-top: 25px;
 }
 
 #right-side{
   width: 330px;
 }
 
-#shadow{
-  box-shadow: inset 4px 0px 5px -5px #000000, 
-              inset -4px 0px 5px -5px #000000;
-  -webkit-box-shadow: inset 4px 0px 5px -5px #000000, 
-            inset -4px 0px 5px -5px #000000;
-  -moz-box-shadow: inset 4px 0px 5px -5px #000000, 
-            inset -4px 0px 5px -5px #000000;
+.navbar.brand{
+  margin-left: -50px;
+}
+.navbar-inner{
+  height: 45px;
+}
+
+.navbar.navbar-fixed-top.navbar-inner.container{
+  height: 2em;
+}
+
+#tool-bar{
+  margin-top: 15px;
+}
+
+.entries{
+  background-color: white;
 }
