--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,6 +6,15 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
+	<div><%= f.label :username %><br />
+  <%= f.text_field :username %></div>
+
+	<div><%= f.label :first_name %><br />
+  <%= f.text_field :first_name %></div>
+  
+  	<div><%= f.label :last_name %><br />
+  <%= f.text_field :last_name %></div>
+  
   <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
   <%= f.password_field :password, :autocomplete => "off" %></div>
 
